--- a/Teste Alfa React/teste_alfa_front/src/index.css
+++ b/Teste Alfa React/teste_alfa_front/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: whitesmoke;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -62,7 +62,6 @@ a:hover {
 body {
     margin: 0;
     padding: 0;
-    min-width: 320px;
     min-height: 100vh;
     box-sizing: border-box;
     display: block;
